# autocards

./: .gitignore  docker-compose-ui.yml  docker-compose.yml  readme.md  test.py
api/: Dockerfile  main.py  pyproject.toml  schemas.py  tasks.py
api/db/: db.py  models.py
ui/: Dockerfile  package-lock.json  package.json
ui/conf/: nginx.conf
ui/public/: index.html
ui/src/: AddArticleForm.css  AddArticleForm.tsx  App.tsx  ArticlesTable.tsx  Cards.tsx  api.ts
