[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Lalit Mishra <gamewithlalit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.13"
requests = "^2.30.0"
langchain = "^0.0.166"
openai = "^0.27.6"
unstructured = "^0.6.5"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
